--- a/templates/contact.html
+++ b/templates/contact.html
@@ -10,15 +10,15 @@
         <h2>Contactez-moi</h2>
         <form id="contact-form">
             <div class="form-group">
-                <label for="firstname">Thomas :</label>
+                <label for="firstname">Prénom :</label>
                 <input type="text" id="firstname" name="firstname" required>
             </div>
             <div class="form-group">
-                <label for="lastname">Loyer :</label>
+                <label for="lastname">Nom :</label>
                 <input type="text" id="lastname" name="lastname" required>
             </div>
             <div class="form-group">
-                <label for="message">Portfolio:</label>
+                <label for="message">Commentaire:</label>
                 <textarea id="message" name="message" rows="4" required></textarea>
             </div>
             <button type="submit">Envoyer</button>
