--- a/templates/commits.html
+++ b/templates/commits.html
@@ -1,79 +1,20 @@
-[
-  {
-    "sha": "3048abf435b703b7b3c3a2847e9430d036b238cb",
-    "node_id": "C_kwDOLQ0xVNoAKDMwNDhhYmY0MzViNzAzYjdiM2MzYTI4NDdlOTQzMGQwMzZiMjM4Y2I",
-    "commit": {
-      "author": {
-        "name": "bstocker",
-        "email": "boris.stocker@gmail.com",
-        "date": "2024-02-12T07:01:43Z"
-      },
-      "committer": {
-        "name": "GitHub",
-        "email": "noreply@github.com",
-        "date": "2024-02-12T07:01:43Z"
-      },
-      "message": "Update README.md",
-      "tree": {
-        "sha": "c4c2b2fde6c8d095dbfdf7529ddfac637d8629ff",
-        "url": "https://api.github.com/repos/OpenRSI/5MCSI_Metriques/git/trees/c4c2b2fde6c8d095dbfdf7529ddfac637d8629ff"
-      },
-      "url": "https://api.github.com/repos/OpenRSI/5MCSI_Metriques/git/commits/3048abf435b703b7b3c3a2847e9430d036b238cb",
-      "comment_count": 0,
-      "verification": {
-        "verified": true,
-        "reason": "valid",
-        "signature": "-----BEGIN PGP SIGNATURE-----\n\nwsFcBAABCAAQBQJlycJXCRC1aQ7uu5UhlAAAnQwQAF1hOAdg6JbZdh3bOSyuWTYe\n2o+Xhs9hYb8O1bXVjNX3cxSFcZDG63Bhb4LC9FelbXVM9qP9k66NwyJc+wDDnJhC\ni0tcj9hnq2CIEdYA9WNbz2lG0NQz8t5fDNSe+NFEODz1CTG/a5uaaL+zsw3+NgWj\ni9QAdN266H0iGlj0tCxee4ocF6wSTx6b6o8wAsQ1Adnbpw+8oSIqL3VLFDfDyhZh\njqQ41sqoqQ7Q3BAhRyN0K7liEJR7Swtk8psujo/tbKCM80vQRK8Fgnqf8iUxHjl9\nXJJeFVBbuuOy9HxaqzOr/cAKjhPfByGJXc/jzyRBfG6bhTXtf2hYKs37t4y48w/N\nnue94iHkdKRIN8iTTIyA32s/2T+lxSXgMvUH4XodLkqWDcKxUtMAXZwGOVNfEqS8\nEZiniBgbTv85RMgmkHEnIOS3Gx2zy6X+4TXb5EC7uIb9WTfeCe4XVvea5gwY81aa\nzAe3mSCKFThv6MlniC7IiICx2Nj39h9N9gCy52vmJaFqwT3tbuuhoRGI5OeJQmly\nBEArXg+vqxdDoAZb5e3ZJAkRy3TVFHduIBg1EZy0T7vFoSHZv1+eKYQCE/lNSKSL\nNCeYj/s5R5RbM+lpdhDE9D3pDycwUhGBG4ht8WLK11SG/4vjvt2OeykkoDHkjJ8c\nIr5mf9hKOfJuONufzEyt\n=Al/h\n-----END PGP SIGNATURE-----\n",
-        "payload": "tree c4c2b2fde6c8d095dbfdf7529ddfac637d8629ff\nparent d2c236e163d33213739505911071214d1a5a30a8\nauthor bstocker <boris.stocker@gmail.com> 1707721303 +0100\ncommitter GitHub <noreply@github.com> 1707721303 +0100\n\nUpdate README.md"
-      }
-    },
-    "url": "https://api.github.com/repos/OpenRSI/5MCSI_Metriques/commits/3048abf435b703b7b3c3a2847e9430d036b238cb",
-    "html_url": "https://github.com/OpenRSI/5MCSI_Metriques/commit/3048abf435b703b7b3c3a2847e9430d036b238cb",
-    "comments_url": "https://api.github.com/repos/OpenRSI/5MCSI_Metriques/commits/3048abf435b703b7b3c3a2847e9430d036b238cb/comments",
-    "author": {
-      "login": "bstocker",
-      "id": 4698433,
-      "node_id": "MDQ6VXNlcjQ2OTg0MzM=",
-      "avatar_url": "https://avatars.githubusercontent.com/u/4698433?v=4",
-      "gravatar_id": "",
-      "url": "https://api.github.com/users/bstocker",
-      "html_url": "https://github.com/bstocker",
-      "followers_url": "https://api.github.com/users/bstocker/followers",
-      "following_url": "https://api.github.com/users/bstocker/following{/other_user}",
-      "gists_url": "https://api.github.com/users/bstocker/gists{/gist_id}",
-      "starred_url": "https://api.github.com/users/bstocker/starred{/owner}{/repo}",
-      "subscriptions_url": "https://api.github.com/users/bstocker/subscriptions",
-      "organizations_url": "https://api.github.com/users/bstocker/orgs",
-      "repos_url": "https://api.github.com/users/bstocker/repos",
-      "events_url": "https://api.github.com/users/bstocker/events{/privacy}",
-      "received_events_url": "https://api.github.com/users/bstocker/received_events",
-      "type": "User",
-      "site_admin": false
-    },
-    "committer": {
-      "login": "web-flow",
-      "id": 19864447,
-      "node_id": "MDQ6VXNlcjE5ODY0NDQ3",
-      "avatar_url": "https://avatars.githubusercontent.com/u/19864447?v=4",
-      "gravatar_id": "",
-      "url": "https://api.github.com/users/web-flow",
-      "html_url": "https://github.com/web-flow",
-      "followers_url": "https://api.github.com/users/web-flow/followers",
-      "following_url": "https://api.github.com/users/web-flow/following{/other_user}",
-      "gists_url": "https://api.github.com/users/web-flow/gists{/gist_id}",
-      "starred_url": "https://api.github.com/users/web-flow/starred{/owner}{/repo}",
-      "subscriptions_url": "https://api.github.com/users/web-flow/subscriptions",
-      "organizations_url": "https://api.github.com/users/web-flow/orgs",
-      "repos_url": "https://api.github.com/users/web-flow/repos",
-      "events_url": "https://api.github.com/users/web-flow/events{/privacy}",
-      "received_events_url": "https://api.github.com/users/web-flow/received_events",
-      "type": "User",
-      "site_admin": false
-    },
-    "parents": [
-      {
-        "sha": "d2c236e163d33213739505911071214d1a5a30a8",
-        "url": "https://api.github.com/repos/OpenRSI/5MCSI_Metriques/commits/d2c236e163d33213739505911071214d1a5a30a8",
-        "html_url": "https://github.com/OpenRSI/5MCSI_Metriques/commit/d2c236e163d33213739505911071214d1a5a30a8"
-      }
-    ]
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Commits</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+</head>
+<body>
+    <h1>Liste des Commits</h1>
+    <div id="commits-container">
+        {% for commit in commits %}
+            <div class="commit">
+                <p><strong>Auteur :</strong> {{ commit.author }}</p>
+                <p><strong>Date :</strong> {{ commit.date }}</p>
+                <p><strong>Message :</strong> {{ commit.message }}</p>
+            </div>
+        {% endfor %}
+    </div>
+</body>
+</html>
