--- a/templates/hello.html
+++ b/templates/hello.html
@@ -1,4 +1,5 @@
-<!doctype html>
+<!DOCTYPE>
+<html lang="fr">
 <title>Evaluation</title>
 <h1>Bienvenue sur votre projet Métriques</h1>
 <h2>Ceci est le projet de : Thomas Loyer</h2>
