--- a/templates/hello.html
+++ b/templates/hello.html
@@ -58,8 +58,8 @@ Depuis GitHUB, nous allons donc créer et déposer dans le répertoire "template
 </p>
 <p>Etape 1.1 : Création du fichier graphique.html
 Dans votre répertoire templates, créez un fichier graphique.html contenant le code suivant :
-<pre><code><xmp>
-<html>
+<pre><code>
+<html lang="fr">
   <head>
     <meta charset="UTF-8" />
     <title>Graphique</title>
@@ -68,7 +68,7 @@ Dans votre répertoire templates, créez un fichier graphique.html contenant le 
     <h2>Mon Graphique</h2>
 </body>
 </html>
-</xmp></code></pre></p>
+</code></pre></p>
 <p>Etape 1.2 : Création d'une nouvelle route
 Créez à présent une nouvelle route afin de pouvoir consulter votre fichier HTML depuis votre site en ligne.
 Pour cela, ajouter le code ci-dessous dans votre fichier __init__.py :
