--- a/templates/hello.html
+++ b/templates/hello.html
@@ -86,8 +86,8 @@ Nous avons également découvert que les Framework (cadre de travail) nous impos
 Pour cela, nous devons utiliser les données de notre nouvelle API /rapport/ et les injecter dans notre fichier graphique.html.
 Nous allons utiliser une bibliothèque open source fournie par Google pour créer ce graphique.</p>
 <p>Modifier votre précédent fichier graphique.html dans GitHUB et remplacer son code par celui-ci :
-<pre><code><xmp>
-<html>
+<pre><code>
+<html lang="fr">
   <head>
     <meta charset="UTF-8" />
     <title>Metrique</title>
@@ -127,7 +127,7 @@ Nous allons utiliser une bibliothèque open source fournie par Google pour crée
     </script>
   </body>
 </html>
-</xmp></code></pre></p>
+</code></pre></p>
 <p>Notions acquises lors de cette séquence : Bravo ! Vous avez à présent en main tous les outils qui vous permettront de créer vos propres tableaux de bord.
 Vous avez appris à récupérer des données issues d'une API externe (des données issues d'un serveur externe), les adapter à vos besoins et afin créer vos propres graphiques.</p>
 <p>- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - </p>
