--- a/templates/hello.html
+++ b/templates/hello.html
@@ -152,12 +152,12 @@ Ce nouveau graphique sera accessible sur votre site en ligne via le chemin suiva
 <p>https://api.github.com/repos/OpenRSI/5MCSI_Metriques/commits</p>
 <p>Indice N°2 : Les données qui nous intéressent ici sont stockées dans la clé suivante : [Commit][author][date]</p>
 <p>Indice N°3 : Voici une route qui permet d'extraire les minutes d'une information formatée comme suit : "2024-02-11T11:57:27Z" </p>
-<pre><code><xmp>
+<pre><code>
 @app.route('/extract-minutes/<date_string>')
 def extract_minutes(date_string):
         date_object = datetime.strptime(date_string, '%Y-%m-%dT%H:%M:%SZ')
         minutes = date_object.minute
         return jsonify({'minutes': minutes})
-</xmp></code></pre></p>
+</code></pre></p>
 <p>- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - </p>
 <h2>FIN DU PROJET</h2>
