--- a/templates/hello.html
+++ b/templates/hello.html
@@ -14,11 +14,11 @@
 <p>Objectif : Savoir créer des routes (c'est à dire la création d'une nouvelle API)</p>
 L'exercice consiste à créer une nouvelle route accèssible depuis le chemin "/contact/" de votre site et qui affichera "Ma page de contact" dans le navigateur de l'internaute.
 L'internaute saisira l'adresse suivante dans son navigateur : <b>https://{Votre URL}/contact/</b> et obtiendra donc le résultat "Ma page de contact". Vous allez pour cela, depuis GitHUB, <b>ajouter</b> le code suivant dans votre fichier <b></b>__init__.py</b> qui est à la racine de votre Repository précédemment créé :
-<pre><code><xmp>
+<pre><code>
 @app.route("/contact/")
 def MaPremiereAPI():
     return "<h2>Ma page de contact</h2>"
-</xmp></code></pre>
+</code></pre>
 Remarque importante : Ce code est à ajouter après la ligne "app = Flask(__name__)" qui est le début de votre programme et avant le bloc "if __name__ == "__main__" à la fin du fichier.
 <b>Attention l'indentation est très importante en Python.</b>
 </p>
