--- a/templates/hello.html
+++ b/templates/hello.html
@@ -36,7 +36,7 @@ Vous observerez que nous utilisons une API gratuite fourni par Openweathermap. C
 <p>Ce qui nous intéresse à présent, c'est extraire la valeur de [dt] (c'est à dire les dates) et les valeurs stockées dans la clé [main][temp], c'est à dire les températures du jour.</p>
 <p>A noter que les dates ici sont au format "Timestamp". C'est à dire que la donnée est le nombre de secondes depuis le 1 janvier 2000 (un légacy d'UNIX). Les températures sont stockées au format Kelvin (il faudra donc les convertir en °C).</p> 
 <p>Vous allez à présent créer une nouvelle route "/tawarano/" dans votre application Python pour filtrer l'API d'Openweathermap et extraire uniquement les dates et température du jour. Ci-dessous la route à ajouter dans votre application.
-<pre><code><xmp>
+<pre><code>
 @app.route('/tawarano/')
 def meteo():
     response = urlopen('https://samples.openweathermap.org/data/2.5/forecast?lat=0&lon=0&appid=xxx')
@@ -48,7 +48,7 @@ def meteo():
         temp_day_value = list_element.get('main', {}).get('temp') - 273.15 # Conversion de Kelvin en °c 
         results.append({'Jour': dt_value, 'temp': temp_day_value})
     return jsonify(results=results)
-</xmp></code></pre></p>
+</code></pre></p>
 <p>Testez cette nouvelle route dans votre navigateur et observer le résultat.</p>    
 <p>- - - - - </p>
 <b>Exercice 3 Bis : Les fichiers HTML</b>
@@ -72,11 +72,11 @@ Dans votre répertoire templates, créez un fichier graphique.html contenant le 
 <p>Etape 1.2 : Création d'une nouvelle route
 Créez à présent une nouvelle route afin de pouvoir consulter votre fichier HTML depuis votre site en ligne.
 Pour cela, ajouter le code ci-dessous dans votre fichier __init__.py :
-<pre><code><xmp>
+<pre><code>
 @app.route("/rapport/")
 def mongraphique():
     return render_template("graphique.html")
-</xmp></code></pre></p>
+</code></pre></p>
 <p>Notions acquises dans cet exercice : Nous avons vu lors de cet exercice comment créer et où déposer les fichiers HTML lorsque l'on utise le Framework Flask.
 Nous avons également découvert que les Framework (cadre de travail) nous imposent une structure de travail où chaque élément doit être à sa place.
 </p>
